# SET10108

./: .gitignore  CMakeLists.txt  README.md
coursework 1/Report/: references.bib  report.tex
coursework 1/futures/: block_chain.cpp  block_chain.h  main.cpp
coursework 1/omp/: block_chain.cpp  block_chain.h  main.cpp
coursework 1/random-data/: block_chain.cpp  block_chain.h  main.cpp  sha256.cpp
coursework 1/sha/: block_chain.cpp  main.cpp  sha256.cpp
coursework 1/threads/: block_chain.cpp  block_chain.h  main.cpp
labs/: CMakeLists.txt
labs/lab01/: hello_world.h  lambda.cpp  lambda_thread.cpp  monte_carlo_pi.cpp  parameter_thread.cpp
labs/lab02/: guarded.h  increment-oop.cpp  increment_atomic.cpp  mandelbrot_fractal.cpp  monte_carlo_atomic.cpp  stack-test.cpp  vector_max_future.cpp
labs/lab03/: bubble_sort.cpp
labs/lab04/: normalise_vector.cpp  simd.cpp
labs/lab05/: send-receive.cpp
labs/lab06/: latency.cpp  mandelbrot_mpi.cpp  sort_mpi.cpp
labs/lab07/: info_opencl.cpp  init_opencl.cpp  mat_mult.cl  mat_mult.cpp
labs/lab08/: cuda_info.cu  matmult_cuda.cu  vecadd_cuda.cu
set10108 practicals/: CMakeLists.txt
set10108 practicals/lab01/: CMakeLists.txt  hello_world.cpp  monte_carlo_pi.cpp  multiple_tasks.cpp  timing.cpp
set10108 practicals/lab02/: atomic_flag.cpp  condition-variables.cpp  deadlock.cpp  guarded.cpp  increment-guarded.cpp  increment-mutex.cpp  increment.cpp  mandelbrot_fractal.cpp  monte_carlo_atomic.cpp  monte_carlo_promise.cpp  threadsafe_stack.h
set10108 practicals/lab03/: hello_openmp.cpp  parallel_sort.cpp  pi_openmp.cpp  scheduling.cpp  trapezoidal_rule.cpp
set10108 practicals/lab04/: simd_add.cpp
set10108 practicals/lab05/: broadcast.cpp  hello.cpp  monte_carlo_mpi.cpp  scatter-gather.cpp
set10108 practicals/lab06/: latency.cpp  trapezoidal_mpi.cpp
set10108 practicals/lab07/: vec_add.cl  vec_add_ocl.cpp
