# CMakeList.txt : CMake project for set10108 practicals, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (set10108practicals "lab01.cpp" "lab01.h")

# TODO: Add tests and install targets if needed.
